--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ target/
 # Generated file during execution
 elements-harvester/example-scripts/example-elements/data/
 elements-harvester/example-scripts/example-elements/logs/
+elements-harvester/example-scripts/example-elements/data2
