1) Refactoring to make relationships "repull" for relationships associated with modified objects work by scanning the raw data cache to build a list of relationship ids that need re-pulling and then fetch just those   additional code ensures that they are only re-translated if those ids have not been fetched previously during the run (note: should avoid actually fetching them too for max efficiency) 2) Alterations to use a newer Apache HTTP client (including beginning of altering build process to account for same) 3) Alterations to use a newer Saxon XSLT engine (including beginning of altering build process to account for same) 4) Addition of state management for successive runs of the process 5) Addition of ability to diff current and previous TDB outputs to produce difference files 6) Ability to split the difference files into small fragments for loading to vivo 7) Start of a Fragment loader for passing those fragments into vivo's sparql API 8) Lots of small tidying and minor refactoring jobs.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ target/
 elements-harvester/example-scripts/example-elements/data/
 elements-harvester/example-scripts/example-elements/logs/
 elements-harvester/example-scripts/example-elements/data2
+data2_melb
