Changes to : 1) improve scripts for running processes in built version (make them cd to the correct working directory) 2) add systemd integration utilities. 3) write good defaults for the properties files 4) Make fragment loader log process end correctly (for better systemd integration) 5) move where filelist file is written out to (in interimtdb loaction).

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -9,25 +9,17 @@
 
 #Elements API configuration
 #Note : Username and Password are required for secure (https:) API endpoints
-#Note : ignoreSSL errors can be left out if not required (will default to false)
-    #apiEndpoint = http://localhost:8090/elements-api/v4.9
-    #apiVersion = 4.9
+#Note : ignoreSSLerrors/rewriteMismatchedPaginationUrls can be left out if not required (both default to false)
+    apiEndpoint = http://localhost:8090/elements-api/v4.9
+    apiVersion = 4.9
     #apiUsername = apiuser
     #apiPassword = apipassword
     #ignoreSSLErrors = false
-
-#old melbourne elements test bed (internal)
-    apiEndpoint = http://10.20.30.218:8090/elements-api/v4.9
-    apiVersion = 4.9
-    #    apiUsername = vivo
-    #    apiPassword = vivo
-    ignoreSSLErrors = true
-    rewriteMismatchedPaginationUrls = true
-
+    #rewriteMismatchedPaginationUrls = false
 
 #VIVO configuration for individual URIs and avatar location
-    vivoBaseURI = http://localhost:8080/vivo/individual/
-    vivoImageDir = data/harvestedImages
+    vivoBaseURI = http://vivo.mydomain.edu/individual/
+    vivoImageDir = data
 
     queryObjects = users,publications,grants,activities,teaching-activities
 
