--- a/elements-harvester/src/main/resources/fragmentloader.properties
+++ b/elements-harvester/src/main/resources/fragmentloader.properties
@@ -7,12 +7,12 @@
 #  ******************************************************************************/
 #
 
-#Configuration of locations to put harvested data (RAW and translated)
-    #tdbOutput = data/tdb-output
+
 #Sparql bits
-    sparqlApiEndpoint = http://localhost:8087/vivoTest
-    #default is below
-    #sparqlApiGraphUri = "http://vitro.mannlib.cornell.edu/default/vitro-kb-2"
+    sparqlApiEndpoint = http://localhost:8080/vivo
     sparqlApiUsername = vivo_root@mydomain.edu
-    sparqlApiPassword = letmein
+    sparqlApiPassword = rootPassword
+    #What "graph" to place the data in within vivo, the default (see below) is the kb-2 graph where manually entered data lives in Vivo.
+    #sparqlApiGraphUri = "http://vitro.mannlib.cornell.edu/default/vitro-kb-2"
+#Configuration of where to retrieve harvested fragments
     tdbOutput = data/tdb-output
