--- a/elements-harvester/pom.xml
+++ b/elements-harvester/pom.xml
@@ -75,6 +75,15 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>*</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
 	</build>
 
     <!--
