Changes to: 1) Fix building of package to ensure logback and properties files are marshalled correctly for both IDE and tarball 2) Update mappings to ensure "fellowship" professional activity mappings are active 3) Make size of "fragments" generated by the system configurable.

--- a/elements-harvester/pom.xml
+++ b/elements-harvester/pom.xml
@@ -62,28 +62,14 @@
                 <configuration>
                     <!-- exclude logback.xml -->
                     <excludes>
-                        <exclude>**/logback.xml</exclude>
-                        <exclude>**/logback-test.xml</exclude>
+                        <exclude>**/eft_logback.xml</exclude>
                         <exclude>**/fl_logback.xml</exclude>
-                        <exclude>**/elements.config.properties</exclude>
+                        <exclude>**/fragmentloader.properties</exclude>
+                        <exclude>**/elementsfetch.properties</exclude>
                     </excludes>
-                    <!--<archive>-->
-                        <!--<manifest>-->
-                            <!--<mainClass>com.mkyong.core.crawler.App</mainClass>-->
-                        <!--</manifest>-->
-                    <!--</archive>-->
                 </configuration>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <excludes>
-                    <exclude>*</exclude>
-                </excludes>
-                <filtering>false</filtering>
-            </resource>
-        </resources>
 	</build>
 
     <!--
