--- a/elements-harvester/pom.xml
+++ b/elements-harvester/pom.xml
@@ -1,5 +1,5 @@
 <!--
- | Copyright (c) 2012 Symplectic Limited. All rights reserved.
+ | Copyright (c) 2012 Symplectic Ltd. All rights reserved.
  | This Source Code Form is subject to the terms of the Mozilla Public
  | License, v. 2.0. If a copy of the MPL was not distributed with this
  | file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -21,7 +21,7 @@
 	</properties>
 
 	<organization>
-		<name>Symplectic Ltd</name>
+		<name>Symplectic</name>
 		<url>http://www.symplectic.co.uk/</url>
 	</organization>
 	
@@ -62,10 +62,13 @@
                 <configuration>
                     <!-- exclude logback.xml -->
                     <excludes>
-                        <exclude>**/eft_logback.xml</exclude>
-                        <exclude>**/fl_logback.xml</exclude>
-                        <exclude>**/fragmentloader.properties</exclude>
+                        <exclude>**/logback-test.xml</exclude>
+                        <exclude>**/logback.xml</exclude>
+                        <exclude>**/*logback.xml</exclude>
+                        <!--<exclude>**/fl_logback.xml</exclude>-->
+                        <!--<exclude>**/eft_logback.xml</exclude>-->
                         <exclude>**/elementsfetch.properties</exclude>
+                        <exclude>**/fragmentloader.properties</exclude>
                     </excludes>
                 </configuration>
             </plugin>
