Mapping changes to improve behaviour around record and journal precedences (excludion lists instead of implied inclusion) Allow selection of the type of the type of Image from Elements to be used in the mappings (NONE/PROFILE/ORIGINAL)     Additionally delegate production of RDF boilerplate describing the image to the XSLT layer to ensure URI's line up.     Mapping changes to support delegation of user photo description being handled by XSLT layer Make harvester tolerant to retrieving "incomplete" relationships (i.e. ones that refer to object categories that the harvester does not understand)
Allow configuration of whether addition or subtraction fragments are processed first by FragmentLoader tools

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -19,7 +19,7 @@
 
 #VIVO configuration for individual URIs and avatar location
     vivoBaseURI = http://vivo.mydomain.edu/individual/
-    vivoImageDir = data
+    vivoImageDir = data/harvestedImages
 
     queryObjects = users,publications,grants,activities,teaching-activities
 
@@ -29,6 +29,9 @@
 
 #Take everything, including things marked as invisible (the VIVO visibility flag will be used if a relationship is marked invisible
     visibleLinksOnly = false
+
+#Which type of profile image should be retrieved from Elements (NONE/PROFILE/ORIGINAL), defaults to PROFILE
+#    elementsImageType = NONE
 
 #Defaults to fetching all users, but can specify group IDs to include or exclude specific sets of users
 #    paramUserGroups = 3
