--- a/elements-harvester/src/main/resources/fragmentloader.properties
+++ b/elements-harvester/src/main/resources/fragmentloader.properties
@@ -16,3 +16,6 @@
     #sparqlApiGraphUri = "http://vitro.mannlib.cornell.edu/default/vitro-kb-2"
 #Configuration of where to retrieve harvested fragments
     tdbOutput = data/tdb-output
+
+#Whether the loader should prioritise addition fragments or subtraction ones (default is false = process additions first)
+#processSubtractFilesFirst = false
