Addition of Eligibility filters (label scheme or generic field) Switch to allow generic xsl parameters to be passed to mapping layer via config - removal of hard coded base uri option. Improvements to default elementsfetch.properties file - more comments, less unnecessary options visible.

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -8,6 +8,8 @@
 #
 
 #Elements API configuration
+########################################################################################################################
+
 #Note : Username and Password are required for secure (https:) API endpoints
 #Note : ignoreSSLerrors/rewriteMismatchedPaginationUrls can be left out if not required (both default to false)
     apiEndpoint = http://localhost:8090/elements-api/v4.9
@@ -17,37 +19,58 @@
     #ignoreSSLErrors = false
     #rewriteMismatchedPaginationUrls = false
 
-#VIVO configuration for individual URIs and avatar location
-    vivoBaseURI = http://vivo.mydomain.edu/individual/
-    vivoImageDir = data/harvestedImages
 
-    queryObjects = users,publications,grants,activities,teaching-activities
-
-#Only get users that are marked as current members of staff
-    currentStaffOnly = true
-    academicsOnly = false
-
-#Take everything, including things marked as invisible (the VIVO visibility flag will be used if a relationship is marked invisible
-    visibleLinksOnly = false
-
-#Which type of profile image should be retrieved from Elements (NONE/PROFILE/ORIGINAL), defaults to PROFILE
-#    elementsImageType = NONE
-
-#Defaults to fetching all users, but can specify group IDs to include or exclude specific sets of users
-#    paramUserGroups = 3
-#    excludeUserGroups = 5
-
-#Defaults to fetching information about all groups and passing that to Vivo, but can specify group IDs to include or exclude specific groups
-#    paramGroups = 3
-#    excludeGroups = 5
-
-#Crosswalk mappings to use
+#Harvester processing options
+########################################################################################################################
+#Crosswalk mapping file entry point to use
     xslTemplate = scripts/example-elements/elements-to-vivo.xsl
 
-#Configuration of locations to put harvested data (RAW and translated)
-    rawOutput = data/raw-records
-    rdfOutput = data/translated-records
-    tdbOutput = data/tdb-output
+#You can pass parameters to your crosswalk file by specifying them as xsl-param-PARAMETERNAME
+#xsl-param-baseURI = http://vivo.mydomain.edu/individual/
 
-#Whether the intermediate file cache should compress the data
+#Whether the intermediate file cache should compress the data (defaults to false)
     zipFiles = true
+
+
+#What data shuold be processed
+########################################################################################################################
+
+#Which Elements object categories should be processed by the harvester
+    queryObjects = users,publications,grants,activities,teaching-activities
+
+#Which type of profile image should be retrieved from Elements (NONE/PROFILE/ORIGINAL), defaults to PROFILE
+    #elementsImageType = NONE
+
+#Which user groups should be represented as "Organisations" in Vivo
+# By default information about all groups is transferred,
+# but you can specify group IDs below to include or exclude specific groups
+    #paramGroups = 3
+    #excludeGroups = 5
+
+
+#Should "invisible" relationships be processed by the crosswalk, or excluded entirely?
+# The default crosswalk will use the VIVO visibility flag if a relationship marked as invisible in Elements is processed.
+    visibleLinksOnly = false
+
+
+#Which users should be included in Vivo
+########################################################################################################################
+#By default all users in the organisation are included,
+#but you can specify group IDs here to include or exclude specific sets of users
+    #paramUserGroups = 3
+    #excludeUserGroups = 5
+
+#only include currentStaff (defaults to true)
+    currentStaffOnly = true
+#only include users marked as "academic" (defaults to true)
+    academicsOnly = false
+
+#You can optionally restrict the set of users sent to vivo based on a label scheme or a generic field from Elements
+#valid values for type are "label-scheme" and "generic-field", the name must be set as the
+    #elligibilityFilterType = label-scheme
+    #elligibilityFilterName = c-profile-availability
+    #elligibilityFilterInclusionValue = Make_Available
+    #elligibilityFilterExclusionValue = Make_Available
+
+
+
