Alteration of gitignore file in line with updated deployment and running configuration alterations

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ target/
 
 # Generated file during execution
 elements-harvester/example-scripts/example-elements/data/
-elements-harvester/example-scripts/example-elements/logs/
-elements-harvester/example-scripts/example-elements/data2
-data2_melb
+lements-harvester/example-scripts/example-elements/logs/
+elements-harvester/data
+elements-harvester/logs
+elements-harvester/state.txt
