Pipeline changes ------------------------------------------------------------------------------------------------------------------ 1) Improvements to tracking when a run has "begun processing" from the point of view of recoverable error states 2) Better logging of errors occurring in the FragmentLoader process 3) Detection of invalid triples being generated by the mapping layer when loading to TDB process     TSB is more tolerant of triples with spaces than SDB, detecting here and faling prevents errors failing the fragment loader which leaves things in an easier to recover state 4) Ability to exclude/include children of specific groups in config/config. 5) Trimming of any xsl params provided via the elementsfetch.properties file
Mapping Changes
------------------------------------------------------------------------------------------------------------------
Bugfix to use "assigns" instead of "related-by" to link educational processes to organizations (causes random display issues on user profile)
Changes to allow WoS data to be used and ensure that an appropriate attribution link exists if Wos Data is present in the record.
Label scheme improvements:
  1) Improvements on how to target "research areas" instead of subject areas
  2) Ability to target "geographic focus" via dictionary mapping label values to "country" uris in config xml
  3) Improved grant-user-relationship link type behaviour - (attempt at better labelling based on type)
  3) Experimental changes to allow "canonical" label values to exist (based on the URI structure) - probably to be improved/altered in future revisions
     These exist to address issues with "users research areas" as shown at the top of institutional user group objects in Vivo

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -43,9 +43,11 @@
 
 #Which user groups should be represented as "Organisations" in Vivo
 # By default information about all groups is transferred,
-# but you can specify group IDs below to include or exclude specific groups
-    #paramGroups = 3
-    #excludeGroups = 5
+# but you can specify group IDs below to include or exclude specific groups or children of specific groups
+    #paramGroups = 14
+        #includeChildGroupsOf = 14
+    #excludeGroups = 15
+        #excludeChildGroupsOf = 15
 
 
 #Should "invisible" relationships be processed by the crosswalk, or excluded entirely?
