Reverting unwanted changes to the elementsfetch.properties config file

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -14,66 +14,66 @@
 
 #Note : Username and Password are required for secure (https:) API endpoints
 #Note : ignoreSSLerrors/rewriteMismatchedPaginationUrls can be left out if not required (both default to false)
-apiEndpoint = http://localhost:9001/non-secure-api/v5.5
-apiVersion = 5.5
-#apiUsername = apiuser
-#apiPassword = apipassword
-#ignoreSSLErrors = false
-#rewriteMismatchedPaginationUrls = false
+    apiEndpoint = http://localhost:9001/non-secure-api/v5.5
+    apiVersion = 5.5
+    #apiUsername = apiuser
+    #apiPassword = apipassword
+    #ignoreSSLErrors = false
+    #rewriteMismatchedPaginationUrls = false
 
 
 #Harvester processing options
 ########################################################################################################################
 #Crosswalk mapping file entry point to use
-xslTemplate = example-scripts/example-elements/elements-to-vivo.xsl
+    xslTemplate = scripts/example-elements/elements-to-vivo.xsl
 
 #You can pass parameters to your crosswalk file by specifying them as xsl-param-PARAMETERNAME
 #xsl-param-baseURI = http://vivo.mydomain.edu/individual/
 
 #Whether the intermediate file cache should compress the data (defaults to false)
-zipFiles = true
+    zipFiles = true
 
 
 #What data shuold be processed
 ########################################################################################################################
 
 #Which Elements object categories should be processed by the harvester
-queryObjects = users, grants,activities,teaching-activities
+    queryObjects = users,publications,grants,activities,teaching-activities
 
 #Which type of profile image should be retrieved from Elements (NONE/PROFILE/ORIGINAL), defaults to PROFILE
-#elementsImageType = NONE
+    #elementsImageType = NONE
 
 #Which user groups should be represented as "Organisations" in Vivo
 # By default information about all groups is transferred,
 # but you can specify group IDs below to include or exclude specific groups
-#paramGroups = 14
-includeChildGroupsOf = 14
-#excludeGroups = 15
-excludeChildGroupsOf = 15
+    #paramGroups = 14
+      #includeChildGroupsOf = 14
+    #excludeGroups = 15
+      #excludeChildGroupsOf = 15
 
 #Should "invisible" relationships be processed by the crosswalk, or excluded entirely?
 # The default crosswalk will use the VIVO visibility flag if a relationship marked as invisible in Elements is processed.
-visibleLinksOnly = false
+    visibleLinksOnly = false
 
 
 #Which users should be included in Vivo
 ########################################################################################################################
 #By default all users in the organisation are included,
 #but you can specify group IDs here to include or exclude specific sets of users
-#paramUserGroups = 3
-#excludeUserGroups = 5
+    #paramUserGroups = 3
+    #excludeUserGroups = 5
 
 #only include currentStaff (defaults to true)
-currentStaffOnly = true
+    currentStaffOnly = true
 #only include users marked as "academic" (defaults to true)
-academicsOnly = false
+    academicsOnly = false
 
 #You can optionally restrict the set of users sent to vivo based on a label scheme or a generic field from Elements
 #valid values for type are "label-scheme" and "generic-field", the name must be set as the
-#elligibilityFilterType = label-scheme
-#elligibilityFilterName = c-profile-availability
-#elligibilityFilterInclusionValue = Make_Available
-#elligibilityFilterExclusionValue = Make_Available
+    #elligibilityFilterType = label-scheme
+    #elligibilityFilterName = c-profile-availability
+    #elligibilityFilterInclusionValue = Make_Available
+    #elligibilityFilterExclusionValue = Make_Available
 
 
 
