--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -45,7 +45,7 @@
 
 #Which user groups should be represented as "Organisations" in Vivo
 # By default information about all groups is transferred,
-# but you can specify group IDs below to include or exclude specific groups
+# but you can specify group IDs below to include or exclude specific groups or their children
     #paramGroups = 14
       #includeChildGroupsOf = 14
     #excludeGroups = 15
