Addition of optional logging for base API calls Alteration of install process to avoid having runtime scripts for other platforms visible.

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -28,13 +28,13 @@
     xslTemplate = scripts/example-elements/elements-to-vivo.xsl
 
 #You can pass parameters to your crosswalk file by specifying them as xsl-param-PARAMETERNAME
-#xsl-param-baseURI = http://vivo.mydomain.edu/individual/
+    #xsl-param-baseURI = http://vivo.mydomain.edu/individual/
 
 #Whether the intermediate file cache should compress the data (defaults to false)
     zipFiles = true
 
 
-#What data shuold be processed
+#What data should be processed
 ########################################################################################################################
 
 #Which Elements object categories should be processed by the harvester
