--- a/elements-harvester/pom.xml
+++ b/elements-harvester/pom.xml
@@ -221,6 +221,11 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.4</version>
+        </dependency>
         <!-- pre-existing dependencies -->
         <dependency>
             <groupId>net.sf.saxon</groupId>
