Changes to support new Elements privacy features (v5.11) - new config option added "publicStaffOnly" defaulted to true.   - changes include alteration so the API now extracts its "version" from a query - so is no longer required in config.   - used to present errors if the configuration to use "publicStaffOnly is incompatible with the API version being used. Additional support for new "research interests" and "Teaching summary" profile fields. Updated default config options and comments.

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -15,7 +15,6 @@
 #Note : Username and Password are required for secure (https:) API endpoints
 #Note : ignoreSSLerrors/rewriteMismatchedPaginationUrls can be left out if not required (both default to false)
     apiEndpoint = http://localhost:9001/non-secure-api/v5.5
-    apiVersion = 5.5
     #apiUsername = apiuser
     #apiPassword = apipassword
     #ignoreSSLErrors = false
@@ -46,15 +45,24 @@
 #Which user groups should be represented as "Organisations" in Vivo
 # By default information about all groups is transferred,
 # but you can specify group IDs below to include or exclude specific groups or their children
-    #paramGroups = 14
-      #includeChildGroupsOf = 14
-    #excludeGroups = 15
-      #excludeChildGroupsOf = 15
+# you can also "excise" groups which will both remove the group and additionally remove any evidence of user's memberships of those groups
+#paramGroups = 1, 52
+    #includeChildGroupsOf = 14,34
+#paramGroupRegexes = "dEpartment.+"
+    #includeChildGroupRegexes = "department.+"
+#excludeGroups = 11
+    # excludeChildGroupsOf = 15
+#excludeGroupRegexes
+    #excludeChildGroupRegexes "department.+"
+#exciseGroups = 11
+    #exiseChildGroupsOf "14"
+#exciseGroupRegexes "department.+"
+    #exciseChildGroupRegexes "department.+"
 
 #Should "invisible" relationships be processed by the crosswalk, or excluded entirely?
 # The default crosswalk will use the VIVO visibility flag if a relationship marked as invisible in Elements is processed.
+# Note: if set to false then this will only affect publications and grants, as Vivo only supports "hiding" for certain types of data.
     visibleLinksOnly = false
-
 
 #Which users should be included in Vivo
 ########################################################################################################################
@@ -63,6 +71,9 @@
     #paramUserGroups = 3
     #excludeUserGroups = 5
 
+#only include staff marked as public (defaults to true)
+#only valid against a v5.5 spec (or later) running on Elements vAPI Endpoint.
+    publicStaffOnly = true;
 #only include currentStaff (defaults to true)
     currentStaffOnly = true
 #only include users marked as "academic" (defaults to true)
