Fix typo in default elementsfetch.properties file

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -73,7 +73,7 @@
 
 #only include staff marked as public (defaults to true)
 #only valid against a v5.5 spec (or later) running on Elements vAPI Endpoint.
-    publicStaffOnly = true;
+    publicStaffOnly = true
 #only include currentStaff (defaults to true)
     currentStaffOnly = true
 #only include users marked as "academic" (defaults to true)
