Tweak to default properties file values

--- a/elements-harvester/src/main/resources/elementsfetch.properties
+++ b/elements-harvester/src/main/resources/elementsfetch.properties
@@ -17,8 +17,8 @@
     apiEndpoint = http://localhost:9001/non-secure-api/v5.5
     #apiUsername = apiuser
     #apiPassword = apipassword
-    #ignoreSSLErrors = false
-    #rewriteMismatchedPaginationUrls = false
+    #ignoreSSLErrors = true
+    #rewriteMismatchedPaginationUrls = true
 
 
 #Harvester processing options
